Tests/test_output/Inference/CopeSets/test_srf_scopes.txt
WARNING: package sun.awt.X11 not in java.desktop
WARNING: package sun.awt.X11 not in java.desktop

ERROR: Undefined function 'wfield' for input arguments of type 'double'.

Error in test_srf_scopes (line 11)
Sig = fconv(wfield(dim, 1).field, FWHM_sig, 2);
            ^^^^^^^^^^^^^^^^^^^^
Error in run (line 112)
evalin('caller', strcat(scriptStem, ';'));
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

STATUS: FAIL
